--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mocha": "^10.0.0",
     "prettier": "^2.7.1",
     "sinon": "^14.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   }
 }
